# self-signed-cert-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: TestingCI.yml
src/: main.rs
