[package]
name = "self-signed-cert"
version = "0.1.0"
authors = ["Jeff Garzik"]
edition = "2021"
description = "Tool to generate self-signed root CA, web server certs and keys"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
