[package]
name = "self-signed-cert"
version = "1.0.3"
authors = ["Jeff Garzik"]
edition = "2021"
description = "Tool to generate self-signed root CA, web server certs and keys"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
openssl = "0.10"
zip = { version = "0.6", default-features = false, features = ["time", "deflate"] }
